--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   flutter_neumorphic: ^3.2.0
   flutter_svg: ^0.22.0
   cached_network_image: ^3.2.1
+  smooth_page_indicator: ^1.0.0+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
