--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   flutter_svg: ^0.22.0
   cached_network_image: ^3.2.1
   smooth_page_indicator: ^1.0.0+2
+  lottie: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
