--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-35.0.dev <4.0.0'
+  sdk: '>=2.18.1 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -55,6 +55,11 @@ dev_dependencies:
   cached_network_image: ^3.2.1
   smooth_page_indicator: ^1.0.0+2
   lottie: ^2.2.0
+  fluttertoast: 8.1.2
+  otp_text_field: ^1.1.3
+  country_list_pick: ^1.0.1+6
+  get_storage: ^2.0.2
+  animated_theme_switcher: ^2.0.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
