--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,11 @@ dev_dependencies:
   flutter_screenutil: ^5.6.0
   flutter_neumorphic: ^3.2.0
   flutter_svg: ^0.22.0
+  google_fonts: ^3.0.1
   cached_network_image: ^3.2.1
   smooth_page_indicator: ^1.0.0+2
   lottie: ^2.2.0
+
   fluttertoast: 8.1.2
   otp_text_field: ^1.1.3
   country_list_pick: ^1.0.1+6
