--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dev_dependencies:
   get_storage: ^2.0.2
   animated_theme_switcher: ^2.0.7
   flutter_staggered_grid_view: ^0.6.2
+  flutter_rating_bar: ^4.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
